Issue #7272:  Add configure test to detect whether sem_open works properly, and use this to skip test_multiprocessing on platforms where sem_open raises a signal.  This should fix some FreeBSD buildbot failures for test_multiprocessing.